--- a/app.css
+++ b/app.css
@@ -5,6 +5,7 @@
     background-repeat: no-repeat;
     background-position: center center;
 }
+
 .btn-next {
     background-image: url("./PNG/next-media.png");
     padding: 1px;
@@ -12,6 +13,7 @@
     background-repeat: no-repeat;
     background-position: center center;
 }
+
 .btn-prev {
     background-image: url("./PNG/previous-media.png");
     padding: 1px;
@@ -19,6 +21,7 @@
     background-repeat: no-repeat;
     background-position: center center;
 }
+
 .btn-play {
     background-image: url("./PNG/play.png");
     padding: 1px;
@@ -26,30 +29,35 @@
     background-repeat: no-repeat;
     background-position: center center;
 }
+
 .btn-audio-controls {
     width: 20px;
     height: 20px;
     margin: 1px;
     float: left;
 }
+
 .btnPressed {
     opacity: 0.7;
 }
+
 .playa-container {
     width: 400px;
     height: 100px;
     padding: 5px;
     position: relative;
 }
+
 .playa-container1 {
     width: 400px;
     height: 100px;
     padding: 5px;
     position: relative;
 }
+
 .playa-controlls-cont {
-    width: 98px;
-    height: 31px;
+    width: 106px;
+    height: 39px;
     position:absolute;
     top: 50%;
     left: 50%;
@@ -58,6 +66,9 @@
     -ms-transform: translate(-50%, -50%);
     transform: translate(-50%, -50%);
     border: 1px solid black;
+    background: linear-gradient(141deg, #0fb8ad 0%, #1fc8db 51%, #2cb5e8 75%);
+    border-radius: 5px;
+    padding: 4px 2px 2px 2px;
 }
 .clickable {
     border: 1px solid #333;
@@ -66,19 +77,50 @@
     height: 4px;
     bottom: 1px;
     box-sizing: border-box;
-/*    margin: 15px;*/
     position: absolute;
 }
+
 .display {
     height: 3px;
     position: absolute;
     width: 100%;
 }
+
 .progress {
+    height:3px;
+    width:10px;
     position:absolute;
     left:0;
     top:0;
-    background:green;
-    height:3px;
-    width:10px;
+    background: -moz-linear-gradient(top, #b5bdc8 0%, #828c95 36%, #28343b 100%);
+    background: -webkit-linear-gradient(top, #b5bdc8 0%,#828c95 36%,#28343b 100%);
+    background: linear-gradient(to bottom, #b5bdc8 0%,#828c95 36%,#28343b 100%);
+}
+
+.play-list-wrap {
+    width: 92px;
+    height: 25px;
+    border-radius: 3px 3px 3px 3px;
+    box-sizing: border-box;
+    border: 1px solid black;
+    top: -25px;
+    position: absolute;
+    left: 0;
+    right: 0;
+    margin: 0 auto;
+    overflow: auto;
+    background: linear-gradient(141deg, #0fb8ad 0%, #1fc8db 51%, #2cb5e8 75%);
+}
+
+.play-list {
+    list-style: none;
+    font-size: 6px;
+    margin: 0px 0px 5px 5px;
+    padding: 0px;
+    position: absolute;
+}
+
+.list-item.selected {
+    background-color: grey;
+    overflow: hidden;
 }
