--- a/app.css
+++ b/app.css
@@ -34,7 +34,16 @@
     width: 20px;
     height: 20px;
     margin: 1px;
-    float: left;
+    display: inline-block;
+}
+
+.btn-volume {
+    width: 10px;
+    height: 10px;
+    background-image: url("./PNG/speaker.png");
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center center;
 }
 
 .btnPressed {
@@ -43,7 +52,7 @@
 
 .playa-container {
     width: 400px;
-    height: 100px;
+    height: 120px;
     padding: 5px;
     position: relative;
 }
@@ -56,8 +65,7 @@
 }
 
 .playa-controlls-cont {
-    width: 106px;
-    height: 39px;
+    height: 44px;
     position:absolute;
     top: 50%;
     left: 50%;
@@ -70,19 +78,25 @@
     border-radius: 5px;
     padding: 4px 2px 2px 2px;
 }
+
+.volume-wrap {
+
+}
+
 .clickable {
     border: 1px solid #333;
+    border-radius: 2px;
     background: #eee;
-    width: 96px;
+    width: 80%;
     height: 4px;
-    bottom: 1px;
+    bottom: 4px;
+    margin-left: 12px;
     box-sizing: border-box;
     position: absolute;
 }
 
 .display {
     height: 3px;
-    position: absolute;
     width: 100%;
 }
 
@@ -97,30 +111,40 @@
     background: linear-gradient(to bottom, #b5bdc8 0%,#828c95 36%,#28343b 100%);
 }
 
-.play-list-wrap {
+.play-list-container {
     width: 92px;
-    height: 25px;
+    height: 45px;
     border-radius: 3px 3px 3px 3px;
     box-sizing: border-box;
     border: 1px solid black;
-    top: -25px;
+    top: -45px;
     position: absolute;
     left: 0;
     right: 0;
     margin: 0 auto;
-    overflow: auto;
+    overflow: hidden;
     background: linear-gradient(141deg, #0fb8ad 0%, #1fc8db 51%, #2cb5e8 75%);
+    padding: 4px;
+}
+
+.play-list-wrap {
+    height: 35px;
 }
 
 .play-list {
-    list-style: none;
-    font-size: 6px;
+    height: 35px;
+    width: 65px;
     margin: 0px 0px 5px 5px;
-    padding: 0px;
-    position: absolute;
+    padding: 0px 0px 0px 10px;
+    font-size: 6px;
+    overflow: auto;
+}
+
+.list-item span {
+    overflow: hidden;
 }
 
 .list-item.selected {
-    background-color: grey;
-    overflow: hidden;
+    /*background-color: grey;*/
+    opacity: 0.5;
 }
