some controlls attacched

--- a/app.css
+++ b/app.css
@@ -161,6 +161,12 @@
 
 .list-item span {
     overflow: hidden;
+    cursor: pointer;
+}
+
+.list-item:hover {
+    color: white;
+    font-weight: bold;
 }
 
 .list-item.selected {
